# company-data-mcp

./: Dockerfile  MODELSCOPE_DEPLOY.md  README.md  deap-config.json  matcher.py  modelscope-serverconfig.json  pyproject.toml  requirements.txt  server.py  test_client.py  test_local.py  test_stdio.py
samples/: table_a.csv  table_b.csv
